<resources>
    <string name="app_name">WE-T-RIP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_age">나이</string>
    <string name="prompt_location">장소</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">아이디에 공백은 불가능합니다</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">이 입력란을 입력하시기 바랍니다</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="goForSignUp">계정이 없으신가요?\n<u>회원가입</u></string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="prompt_email">이메일</string>

    <!-- Strings related to course -->
    <string name="course_details">The cheapest Jeju trip :)</string>
    <string name="course01_01_title">Rail bike</string>
    <string name="course01_01_expense">10$</string>
    <string name="course01_01_time">AM 07:00 ~ PM 01:00</string>
    <string name="course01_01_details">We can watch a nice view of Jeju island!\nLet\'s
        go together!!!
    </string>
</resources>
