<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:background="#8878909C" />

    <LinearLayout
        android:id="@+id/contentsDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ownersTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="Owners"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#cc000000"/>
        <LinearLayout
            android:id="@+id/ownersContentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ownersProfileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/profile_picture" />
            <TextView
                android:id="@+id/ownersDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingTop="10dp"
                android:text="@string/course_details" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#8878909C" />

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Course"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#cc000000"/>

        <TextView
            android:id="@+id/firstDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8878909C"
            android:text="Day 1"
            android:textSize="15sp"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"/>
        <RelativeLayout
            android:id="@+id/firstDayDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/subTitle01_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course01_01_title"
                android:textSize="15sp"
                android:textColor="#ff000000"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/expense01_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course01_01_expense"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/time01_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expense01_01"

                android:layout_marginBottom="10sp"
                android:text="@string/course01_01_time"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/courseDetails01_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time01_01"
                android:text="@string/course01_01_details"
                android:textColor="#dd000000"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#8878909C" />
    </LinearLayout>

    <View
        android:id="@+id/lowerScreen"
        android:layout_below="@+id/contentsDetails"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ff000000"
        android:layout_alignParentBottom="true" />
</RelativeLayout>